--- a/pom.xml
+++ b/pom.xml
@@ -2950,6 +2950,11 @@
             </dependency>
             <dependency>
                 <groupId>org.testcontainers</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>1.19.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
                 <artifactId>pulsar</artifactId>
                 <version>${testcontainers.version}</version>
             </dependency>
